[gd_scene load_steps=9 format=3 uid="uid://kmfldxg35pbo"]

[ext_resource type="Script" path="res://SingleGameModeController/tutorial.gd" id="1_ehuit"]
[ext_resource type="PackedScene" uid="uid://epdo1nsksbdu" path="res://Levels/tutorial_level.tscn" id="1_yb1ct"]
[ext_resource type="PackedScene" uid="uid://doskty1qqadix" path="res://Stone/stone.tscn" id="2_ehuit"]
[ext_resource type="PackedScene" uid="uid://bh0yfgxus5d8h" path="res://Minion/minion.tscn" id="3_4t6hg"]
[ext_resource type="PackedScene" uid="uid://yo1omiogcwur" path="res://Boss/boss.tscn" id="5_rwowx"]
[ext_resource type="PackedScene" uid="uid://bskls1p343n00" path="res://Player/player.tscn" id="6_hu44a"]
[ext_resource type="PackedScene" uid="uid://b202vivir0vxf" path="res://Shot/shot.tscn" id="7_4t6hg"]
[ext_resource type="PackedScene" uid="uid://6u2ryv1qlnr8" path="res://Utils/frame_counter.tscn" id="8_8w8t1"]

[node name="tutorial" type="Node2D" groups=["minions"]]
script = ExtResource("1_ehuit")
stone_scene = ExtResource("2_ehuit")
minion_scene = ExtResource("3_4t6hg")

[node name="tutorial_level" parent="." instance=ExtResource("1_yb1ct")]

[node name="StoneTimer" type="Timer" parent="."]

[node name="Boss" parent="." instance=ExtResource("5_rwowx")]
position = Vector2(767, 226)

[node name="Player" parent="." instance=ExtResource("6_hu44a")]
position = Vector2(326, 430)

[node name="Shot" parent="." instance=ExtResource("7_4t6hg")]

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MinionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FrameCounter" parent="." instance=ExtResource("8_8w8t1")]

[connection signal="timeout" from="StoneTimer" to="." method="_on_stone_timer_timeout"]
[connection signal="is_dead" from="Boss" to="." method="_on_game_end"]
[connection signal="is_dead" from="Player" to="." method="_on_game_end"]
[connection signal="throw" from="Player" to="." method="_on_player_throw"]
[connection signal="shoot" from="Shot" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="MinionTimer" to="." method="_on_minion_timer_timeout"]
